--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Lives button, Collecting points -->
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <title>Document</title>
 </head>
+
 <body>
   <div class="jumbotron jumbotron-fluid">
     <div class="row">
@@ -42,6 +44,7 @@
     p {
       text-align: center
     }
+
     h1 {
       text-align: center
     }
@@ -49,7 +52,7 @@
   <div class="container">
     <!--- this row is just for designing the borders and the actual game -->
     <div class="row">
-      <canvas id="myCanvas" width="600" height="450">
+      <canvas id="myCanvas" width="800" height="500">
         <!--- where the javascript is -->
       </canvas>
     </div>
@@ -66,8 +69,23 @@
             <button class="btn btn-dark btn-lg fa fa-arrow-right right-button">Right</button>
           </div>
           <br>
+          <hr>
           <div class="text-center">
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="center">
+      <div id="lives" class="card">
+        <h4 class="card-header">Lives</h4>
+        <div class="row">
+          <img src="https://images.cdn2.stockunlimited.net/clipart/pixel-art-heart_1958356.jpg" alt="Image1" height="60"
+            width="60">
+          <img src="https://images.cdn2.stockunlimited.net/clipart/pixel-art-heart_1958356.jpg" alt="Image2" height="60"
+            width="60">
+          <img src="https://images.cdn2.stockunlimited.net/clipart/pixel-art-heart_1958356.jpg" alt="Image3" height="60"
+            width="60">
+          <button class="btn btn-danger btn-lg fa fa-arrow-right right-button">More Objects</button>
         </div>
       </div>
     </div>
@@ -84,20 +102,5 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
