--- a/instructions.html
+++ b/instructions.html
@@ -37,8 +37,7 @@
       <div class="container">
         <div class="card" style="width: 30 rem;">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">  Step 1: Click the start button to begin the game! 
-                <button type="button" class="btn btn-primary">Start</button></li>
+              <li class="list-group-item">  Step 1: You are controlling Mario! He is running away from the evil red square! Your job is to keep him safe.</li>
               <li class="list-group-item">Step 2: Use the move controlls to move Mario away from the chaser
                 <img src="du8vnh-278ec7e6-5df5-47f1-a25a-4be06da6e45b.jpg" alt="red square" height="30" width="30"></li>
               <li class="list-group-item">Step 3: If the chaser catches Mario, you will loose a life. If you lose all 3 lives, it's game over!
