--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-      <script src="./assets/main.js</script>
+      <script src="./assets/main.js"></script>
     </div>
   </body>
 </html>
